fix URL deprecation